--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_menu_grillardin">MenuGrillardin</string>
+    <string name="title_activity_detail_commande">DetailCommandeActivity</string>
+    <string name="exitOption">Exit</string>
+    <string name="aboutOption">Passer Commande</string>
 </resources>
